load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@bazel_skylib//rules:common_settings.bzl", "bool_setting")
load("@rules_zig//zig:defs.bzl", "zig_asm", "zig_binary")
load("@rules_zig//zig:toolchain.bzl", "zig_target_toolchain", "zig_toolchain")
load(":bootstrap_binary.bzl", "bootstrap_binary", "bootstrap_directory")

package(features = ["layering_check"])

constraint_value(
    name = "kvx",
    constraint_setting = "@platforms//cpu",
)

constraint_value(
    name = "cos",
    constraint_setting = "@platforms//os",
)

platform(
    name = "kvx_cos",
    constraint_values = [
        "//:kvx",
        "//:cos",
    ],
)

platform(
    name = "bootstrap",
    constraint_values = [
        "//:kvx",
        "//:cos",
    ],
    parents = ["@platforms//host"],
)

platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        # ubuntu:22.04 has GNU C Library (Ubuntu GLIBC 2.35-0ubuntu3.10)
        # But apparently not in this docker://ubuntu:22.04 image?
        "@llvm//constraints/libc:gnu.2.31",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "container-image": "docker://ubuntu:22.04",
        "OSFamily": "Linux",
    },
    visibility = ["//visibility:public"],
)

bool_setting(
    name = "from_source",
    build_setting_default = True,
)

config_setting(
    name = "source",
    flag_values = {
        ":from_source": "True",
    },
)

bootstrap_binary(
    name = "zig_from_source_binary",
    actual = "@zig//:zig",
)

zig_toolchain(
    name = "zig_from_source",
    zig_cache = "/var/tmp/zig-cache",
    zig_exe = ":zig_from_source_binary",
    zig_h = "@zig//:zig_h",
    zig_lib = "@zig//:lib_dir",
    zig_version = "0.16.0",
)

toolchain(
    name = "zig-kvx_toolchain",
    # exec_compatible_with = [
    #     "@platforms//os:macos",
    #     "@platforms//cpu:aarch64",
    # ],
    target_compatible_with = [
        "//:kvx",
        "//:cos",
    ],
    # No need since there is no, non from source, kvx zig toolchain
    # target_settings = [
    #     ":source",
    # ],
    toolchain = ":zig_from_source",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

toolchain(
    name = "zig-macos_toolchain",
    target_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_settings = [
        ":source",
    ],
    toolchain = ":zig_from_source",
    toolchain_type = "@rules_zig//zig:toolchain_type",
)

zig_target_toolchain(
    name = "kvx-cos",
    target = "kvx-cos",
)

toolchain(
    name = "kvx-cos_toolchain",
    target_compatible_with = [
        "//:kvx",
        "//:cos",
    ],
    toolchain = "kvx-cos",
    toolchain_type = "@rules_zig//zig/target:toolchain_type",
)

zig_asm(
    name = "kvx_add",
    main = "add.zig",
    # Zig 0.16 enables stack protection in safe builds, but kvx-cos does not
    # provide the required stack-protector libcall yet.
    zigopts = ["-fno-stack-protector"],
)

platform_transition_filegroup(
    name = "kvx_asm",
    srcs = ["kvx_add"],
    target_platform = "//:kvx_cos",
)

zig_binary(
    name = "main",
    main = "main.zig",
    # data = [
    #     ":kvx_asm",
    # ],
)
