module(
    name = "zml",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_zig", version = "0.12.2")
bazel_dep(name = "llvm", version = "0.6.1")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

### Zig toolchain
zig = use_extension("@rules_zig//zig:extensions.bzl", "zig")
zig.index(file = "//:index.json")
zig.toolchain(zig_version = "0.16.0-dev.2676+4e2cec265")
zig.mirrors(urls = [
    "https://pkg.machengine.org/zig",
    "https://zigmirror.hryx.net/zig",
    "https://zig.linus.dev/zig",
    "https://zig.squirl.dev",
    "https://zig.florent.dev",
    "https://zig.mirror.mschae23.de/zig",
    "https://zigmirror.meox.dev",
    "https://ziglang.freetls.fastly.net",
    "https://zig.tilok.dev",
    "https://zig-mirror.tsimnet.eu/zig",
    "https://zig.karearl.com/zig",
    "https://pkg.earth/zig",
    "https://fs.liujiacai.net/zigbuilds",
    "https://ziglang.org/builds/",
])
use_repo(zig, "zig_toolchains")

register_toolchains("@rules_zig//zig/target:all")

register_toolchains("@zig_toolchains//:all")
###

### LLVM toolchains
register_toolchains("@llvm//toolchain:all")
###

llvm = use_extension("@llvm//extensions:llvm.bzl", "llvm")
llvm.configure(
    targets = [
        "AArch64",
        "AMDGPU",
        "ARM",
        "AVR",
        "BPF",
        "Hexagon",
        "Lanai",
        "LoongArch",
        "Mips",
        "MSP430",
        "NVPTX",
        "PowerPC",
        "RISCV",
        "Sparc",
        "SPIRV",
        "SystemZ",
        "VE",
        "WebAssembly",
        "X86",
        "XCore",
    ],
)
use_repo(llvm, "llvm-project")

# git_override(
#     module_name = "rules_zig",
#     commit = "6c5d6a07b4ef48be894e7418bcae37bac54e1c2e",
#     remote = "https://github.com/zml/rules_zig.git",
# )

local_path_override(
    module_name = "rules_zig",
    path = "./rules_zig",
)
